fixed screen so that it doesnt overflow and goes to the right

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
     padding:10px 10px 0 10px;
     border-radius: 10px;
     background-color: gray;
+    overflow:hidden;
+    display:flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    white-space: nowrap;
 }
 
 .row{
@@ -64,5 +69,6 @@
 .fontColor{
     color:#E7BB41;
     font-family:Arial, Helvetica, sans-serif; 
-    font-size:16px;
+    font-size:33px;
+    text-align: right;
 }
